# ai-bootcamp

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  env.example  pyproject.toml
.idea_backup/: modules.xml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: analyze_dataset_quality_html.py  eval_retriever.py
apps/api/evals/analyze_dataset_helpers/: helper.py  report_helper_console.py  report_helper_csv.py  report_helper_html.py  report_helper_json.py  stats_helper.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  graph.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
dataset_analysis_outputs/: rag-evaluation-dataset-30-v2_per_example_20260410_185652.csv  rag-evaluation-dataset-30-v2_per_example_20260410_194348.csv  rag-evaluation-dataset-30-v2_per_example_20260410_195702.csv  rag-evaluation-dataset-30-v2_per_example_20260410_200619.csv  rag-evaluation-dataset-30-v2_per_example_20260410_223030.csv  rag-evaluation-dataset-30-v2_per_example_20260410_225559.csv  rag-evaluation-dataset-30-v2_per_example_20260411_011729.csv  rag-evaluation-dataset-30-v2_report_20260410_185652.html  rag-evaluation-dataset-30-v2_report_20260410_194348.html  rag-evaluation-dataset-30-v2_report_20260410_195702.html  rag-evaluation-dataset-30-v2_report_20260410_200619.html  rag-evaluation-dataset-30-v2_report_20260410_225559.html  rag-evaluation-dataset-30-v2_report_20260411_011729.html  rag-evaluation-dataset-30-v2_summary_20260410_185652.json  rag-evaluation-dataset-30-v2_summary_20260410_194348.json  rag-evaluation-dataset-30-v2_summary_20260410_195702.json  rag-evaluation-dataset-30-v2_summary_20260410_200619.json  rag-evaluation-dataset-30-v2_summary_20260410_225559.json  rag-evaluation-dataset-30-v2_summary_20260411_011729.json
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-Amazon.ipynb  03-RAG-pipeline.ipynb  04-valuation-dataset.ipynb  04-valuation-dataset1.ipynb  05-RAG-Evals.ipynb
notebooks/week2/: 01-Struktured-outputs-intro.ipynb  02-Structured-outputs-RAG-pipeline.ipynb  04-reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week2/prompts/: retrieval_generation.yaml
notebooks/week3/: 01-langGraph-intro.ipynb  02-query-rewriting.ipynb  03-router.ipynb  04-agent-single-turn.ipynb
notebooks/week3/utils/: utils.py
scripts/: reset_kerrnel.bat
