[project]
name = "ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.135.3",
    "google-genai>=1.70.0",
    "groq>=1.1.2",
    "langsmith>=0.7.26",
    "numpy<2",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.43.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "cohere>=6.1.0",
    "fastembed>=0.8.0",
    "langgraph>=1.1.6",
    "langsmith>=0.7.26",
    "matplotlib>=3.10.8",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
]
