[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "strakhovdenya", email = "strakhov.denya@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "cohere>=6.1.0",
    "fastapi>=0.135.3",
    "google-genai>=1.70.0",
    "groq>=1.1.2",
    "instructor>=1.15.1",
    "langgraph>=1.1.6",
    "langsmith>=0.7.26",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
]
